--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -6,4 +6,53 @@
     body {
       @apply font-primary bg-primary text-white leading-loose;
     }
+    h1{
+      @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
+    }
+    h2{
+      @apply text-[36px] xl:text-[48px] leading-[1.1] font-semibold;
+    }
+    h3{
+      @apply text-[20px] xl:text-[24px] leading-[1.1] font-semibold;
+    }
+  }
+  .text-outline{
+    -webkit-text-stroke: 1px #ffffff;
+  }
+  .text-outline-hover{
+    -webkit-text-stroke: 1px #00ff99;
+  }
+  @keyframes float {
+    0% {
+      box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+      transform: translatey(0px);
+    }
+    50% {
+      box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+      transform: translatey(-20px);
+    }
+    100% {
+      box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+      transform: translatey(0px);
+    }
+  }
+  .avatar {
+    width: 170px;
+    height: 170px;
+    box-sizing: border-box;
+    border: 5px white solid;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    transform: translatey(0px);
+    animation: float 6s ease-in-out infinite;
+    img { width: 100%; height: auto; }
+  }
+  
+  .content {
+    width: 100%;
+    max-width: 600px;
+    padding: 20px 40px;
+    box-sizing: border-box;
+    text-align: center;
   }
